# scan2kicad

./: .gitignore  CLAUDE.md  LICENSE  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
SPECS/: AGENTS.md  FINETUNING.md  RENDERER.md  SPEC.md
init_scripts/: init_kicad.sh
resources/: inference_job.yml  ingestion_job.yml  rendering_demo_job.yml  serving_endpoint.yml.disabled
src/notebooks/: 01_ingest_open_schematics.py  02_qwen3vl_batch_inference.py  03_model_serving_setup.py  04_rendering_demo.py
src/scan2kicad/: __init__.py  display.py  inference.py  ingestion.py  rendering.py  serving.py
src/scan2kicad/renderer/: __init__.py  lib_symbol_parser.py  pipeline.py  svg_builder.py  types.py
tests/: conftest.py  test_display.py  test_inference.py  test_ingestion.py  test_rendering.py  test_serving.py
tests/fixtures/: sample_complex.kicad_sch  sample_hierarchical.kicad_sch  sample_medium.kicad_sch  sample_rich.kicad_sch  sample_small.kicad_sch
tests/test_renderer/: test_lib_symbol_parser.py  test_pipeline.py  test_svg_builder.py
