[project]
name = "scan2kicad"
version = "0.1.0"
description = "KiCAD on Databricks — ingest, understand, and render electronic schematics"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.20",
    "huggingface-hub>=0.20",
    "Pillow>=10.0",
    "matplotlib>=3.8",
    "mlflow>=2.10",
    "kicad-sch-api>=0.5",
    "sexpdata>=1.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.27",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
    "ty>=0.0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scan2kicad"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
extend-exclude = ["src/notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ty.environment]
python-version = "3.10"
extra-paths = ["src"]

[tool.ty.rules]
# GPU deps (torch, transformers) and Spark (pyspark) are not installed locally
unresolved-import = "warn"